[gd_scene load_steps=2 format=3 uid="uid://dylagvwjw27tn"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_2dud4"]

[node name="SettingsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2dud4")

[node name="ReturnButton_SettingsScreen" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Return"

[node name="VSyncLabel_SettingsScreen" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "VSync"

[node name="VSyncCheckbox_SettingsScreen" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -12.0
offset_right = 48.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="FullScreenLabel_SettingsScreen" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = 18.0
offset_right = 42.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "Full Screen"

[node name="FullScreenCheckbox_SettingsScreen" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 46.0
offset_top = 19.0
offset_right = 70.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="FPSCounter_SettingsScreen" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0

[connection signal="pressed" from="ReturnButton_SettingsScreen" to="." method="_on_return_button_settings_screen_pressed"]
[connection signal="toggled" from="VSyncCheckbox_SettingsScreen" to="." method="_on_v_sync_checkbox_settings_screen_toggled"]
[connection signal="toggled" from="FullScreenCheckbox_SettingsScreen" to="." method="_on_full_screen_checkbox_settings_screen_toggled"]
